--- a/portfolio-aro/Pages/Competences.razor
+++ b/portfolio-aro/Pages/Competences.razor
@@ -1,5 +1,58 @@
-﻿<h3>Competences</h3>
+﻿<h1>Let's dive into the competences I acquired throughout the years!</h1>
+<div style="display: flex;
+    justify-content: space-around;
+    margin-top: 5%;
+    margin-bottom: 5%;">
+    <button class="competence-button">
+        <span class="material-symbols-outlined">
+            terminal
+        </span>
+        Develop
+    </button>
+    <button class="competence-button">
+        <span class="material-symbols-outlined">
+            speed
+        </span>
+        Optimize
+    </button>
+    <button class="competence-button">
+        <span class="material-symbols-outlined">
+            assignment
+        </span>
+        Administer
+    </button>
+    <button class="competence-button">
+        <span class="material-symbols-outlined">
+            groups
+        </span>
+        Manage
+    </button>
+    <button class="competence-button">
+        <span class="material-symbols-outlined">
+            supervisor_account
+        </span>
+        Lead
+    </button>
+    <button class="competence-button">
+        <span class="material-symbols-outlined">
+            partner_exchange
+        </span>
+        Collaborate
+    </button>
+</div>
 
 @code {
 
 }
+
+
+<style>
+    .competence-button {
+        background: white;
+        border-radius: 0.25em;
+        border: #c3c3ff 1px solid;
+        padding: 2%;
+        font-size: xx-large;
+        flex-direction: column;
+    }
+</style>
