--- a/portfolio-aro/Pages/Components/Card.razor
+++ b/portfolio-aro/Pages/Components/Card.razor
@@ -2,7 +2,7 @@
 
     <h5 class="card-title">@title</h5>
     <div class="card-img-top">
-        <img src="@image_path" alt="..." style="width:-webkit-fill-available;">
+        <img src="@image_path" alt="..." style="width:100%;">
     </div>
 </div>
 @code {
