--- a/portfolio-aro/wwwroot/css/app.css
+++ b/portfolio-aro/wwwroot/css/app.css
@@ -2,6 +2,7 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    overscroll-behavior-y: none;
 }
 
 h1:focus {
@@ -18,9 +19,6 @@ a, .btn-link {
     border-color: #1861ac;
 }
 
-.content {
-    padding-top: 1.1rem;
-}
 
 .valid.modified:not([type=checkbox]) {
     outline: 1px solid #26b050;
