--- a/portfolio-aro/wwwroot/css/portfolio/navbar.css
+++ b/portfolio-aro/wwwroot/css/portfolio/navbar.css
@@ -3,12 +3,16 @@
     background-color: cadetblue;
 }
 
-.sticky {
+.navbar {
+    justify-content: flex-end;
+    background: #dcdcf5;
     position: fixed;
     top: 0;
+    z-index: 1020;
     width: 100%;
 }
-.navbar{
-    justify-content:flex-end;
-    background: red;
-}
+
+    .navbar button {
+        font-weight: bold;
+        color: #2f2f2f;
+    }
