--- a/portfolio-aro/wwwroot/css/portfolio/navbar.css
+++ b/portfolio-aro/wwwroot/css/portfolio/navbar.css
@@ -4,15 +4,17 @@
 }
 
 .navbar {
-    justify-content: flex-end;
     background: #dcdcf5;
     position: fixed;
     top: 0;
     z-index: 1020;
     width: 100%;
+    padding-left:1%;
+    padding-right:1%;
 }
 
     .navbar button {
+        font-size:1.5em;
         font-weight: bold;
         color: #2f2f2f;
     }
