--- a/portfolio-aro/Pages/Competences.razor
+++ b/portfolio-aro/Pages/Competences.razor
@@ -2,38 +2,38 @@
 <MudCarousel Style="height: 100px; width: 80%; background: white; border-radius: 100em; margin: 10% !important;" ShowArrows="true" ShowBullets="false" EnableSwipeGesture="true" AutoCycle="false" TData="object">
     <MudCarouselItem Transition="transition">
         <div class="carousel-container" style="height:100%">
-            <img src="/assets/techno/logo-blazor.png" alt="logo-blazor" />
-            <img src="/assets/techno/logo-angular.png" alt="logo-angular" />
-            <img src="/assets/techno/logo-vuejs.png" alt="logo-vuejs" />
-            <img src="/assets/techno/logo-symfony.png" alt="logo-symfony" />
+            <img src="./assets/techno/logo-blazor.png" alt="logo-blazor" />
+            <img src="./assets/techno/logo-angular.png" alt="logo-angular" />
+            <img src="./assets/techno/logo-vuejs.png" alt="logo-vuejs" />
+            <img src="./assets/techno/logo-symfony.png" alt="logo-symfony" />
         </div>
     </MudCarouselItem>
     <MudCarouselItem Transition="transition">
         <div class="carousel-container">
-            <img src="/assets/techno/logo-mysql.svg" alt="logo-mysql" />
-            <img src="/assets/techno/logo-mongodb.png" alt="logo-mongodb" />
-            <img src="/assets/techno/logo-neo4j.png" alt="logo-neo4j" />
+            <img src="./assets/techno/logo-mysql.svg" alt="logo-mysql" />
+            <img src="./assets/techno/logo-mongodb.png" alt="logo-mongodb" />
+            <img src="./assets/techno/logo-neo4j.png" alt="logo-neo4j" />
         </div>
     </MudCarouselItem>
     <MudCarouselItem Transition="transition">
         <div class="carousel-container">
-            <img src="/assets/techno/logo-c.png" alt="logo-c" />
-            <img src="/assets/techno/logo-csharp.png" alt="logo-csharp" />
-            <img src="/assets/techno/logo-java.png" alt="logo-java" />
-            <img src="/assets/techno/logo-python.png" alt="logo-python" />
+            <img src="./assets/techno/logo-c.png" alt="logo-c" />
+            <img src="./assets/techno/logo-csharp.png" alt="logo-csharp" />
+            <img src="./assets/techno/logo-java.png" alt="logo-java" />
+            <img src="./assets/techno/logo-python.png" alt="logo-python" />
         </div>
     </MudCarouselItem>
     <MudCarouselItem Transition="transition">
         <div class="carousel-container">
-            <img src="/assets/techno/logo-threejs.png" alt="logo-threejs" />
-            <img src="/assets/techno/logo-unity.png" alt="logo-unity" />
-            <img src="/assets/techno/logo-ue.png" alt="logo-ue" />
+            <img src="./assets/techno/logo-threejs.png" alt="logo-threejs" />
+            <img src="./assets/techno/logo-unity.png" alt="logo-unity" />
+            <img src="./assets/techno/logo-ue.png" alt="logo-ue" />
         </div>
     </MudCarouselItem>
     <MudCarouselItem Transition="transition">
         <div class="carousel-container">
-            <img src="/assets/techno/logo-nodejs.png" alt="logo-nodejs" />
-            <img src="/assets/techno/logo-spring.png" alt="logo-spring" />
+            <img src="./assets/techno/logo-nodejs.png" alt="logo-nodejs" />
+            <img src="./assets/techno/logo-spring.png" alt="logo-spring" />
         </div>
     </MudCarouselItem>
 </MudCarousel>
