--- a/portfolio-aro/Shared/NavMenu.razor
+++ b/portfolio-aro/Shared/NavMenu.razor
@@ -5,10 +5,10 @@
         Who am i
     </button>
     <button class="nav-item nav-link" onclick="document.getElementById('competences').scrollIntoView({behavior:'smooth',block:'center'})">
-        Competences
+        Skills
     </button>
-    <button class="nav-item nav-link" onclick="document.getElementById('interests').scrollIntoView({behavior:'smooth',block:'center'})">
-        Interests
+    <button class="nav-item nav-link" onclick="document.getElementById('projects').scrollIntoView({behavior:'smooth',block:'center'})">
+        Projects
     </button>
 </nav>
 
