--- a/portfolio-aro/Pages/Competences.razor
+++ b/portfolio-aro/Pages/Competences.razor
@@ -1,7 +1,10 @@
-﻿<p>My education allowed me to obtain experience across numerous technologies</p>
-<MudCarousel Style="height: 100px; width: 80%; background: white; border-radius: 100em; margin: 10% !important;" ShowArrows="true" ShowBullets="false" EnableSwipeGesture="true" AutoCycle="false" TData="object">
+﻿
+
+<h1>Technologies I'm proficient in</h1>
+<MudCarousel Style="height: 200px; width: 80%; background: white; border-radius: 100em; margin: 10% !important;" ShowArrows="true" ShowBullets="false" EnableSwipeGesture="true" AutoCycle="true" TData="object">
     <MudCarouselItem Transition="transition">
-        <div class="carousel-container" style="height:100%">
+        <h2 class="carousel-title">Web Development Frameworks</h2>
+        <div class="carousel-container">
             <img src="./assets/techno/logo-blazor.png" alt="logo-blazor" />
             <img src="./assets/techno/logo-angular.png" alt="logo-angular" />
             <img src="./assets/techno/logo-vuejs.png" alt="logo-vuejs" />
@@ -9,6 +12,7 @@
         </div>
     </MudCarouselItem>
     <MudCarouselItem Transition="transition">
+        <h2>Database</h2>
         <div class="carousel-container">
             <img src="./assets/techno/logo-mysql.svg" alt="logo-mysql" />
             <img src="./assets/techno/logo-mongodb.png" alt="logo-mongodb" />
@@ -16,6 +20,7 @@
         </div>
     </MudCarouselItem>
     <MudCarouselItem Transition="transition">
+        <h2>Programming Languages</h2>
         <div class="carousel-container">
             <img src="./assets/techno/logo-c.png" alt="logo-c" />
             <img src="./assets/techno/logo-csharp.png" alt="logo-csharp" />
@@ -24,6 +29,7 @@
         </div>
     </MudCarouselItem>
     <MudCarouselItem Transition="transition">
+        <h2>3D & Game Development Tools</h2>
         <div class="carousel-container">
             <img src="./assets/techno/logo-threejs.png" alt="logo-threejs" />
             <img src="./assets/techno/logo-unity.png" alt="logo-unity" />
@@ -31,13 +37,14 @@
         </div>
     </MudCarouselItem>
     <MudCarouselItem Transition="transition">
+        <h2>Backend Frameworks </h2>
         <div class="carousel-container">
             <img src="./assets/techno/logo-nodejs.png" alt="logo-nodejs" />
             <img src="./assets/techno/logo-spring.png" alt="logo-spring" />
         </div>
     </MudCarouselItem>
 </MudCarousel>
-<h1 style="text-align: center;">Let's dive into the competences I acquired across the years!</h1>
+<h1 >Competences</h1>
 <div style="display: flex;
     justify-content: space-around;
     margin-top: 5%;
@@ -89,16 +96,28 @@
 
 <style>
     .carousel-container {
-        display:flex;    justify-content: space-evenly;height:100%; padding:1%;
+        display: flex;
+        justify-content: space-evenly;
+        height: 100%;
+        padding: 1%;
     }
 
-    .competence-button {
-        padding: 2%;
+        .carousel-container img {
+            height: 100px;
+        }
+
+        h2 {
+            text-align: center;
+            padding: 2%;
+        }
+
+    button competence-button {
+        padding: 0.5em;
         font-size: xx-large;
         flex-direction: column;
     }
 
-    .competence-button {
+        button competence-button {
         --bg: #000;
         --hover-bg: #ff90e8;
         --hover-text: #000;
@@ -106,20 +125,19 @@
         cursor: pointer;
         border: 1px solid var(--bg);
         border-radius: 4px;
-        padding: 0.8em 2em;
         background: var(--bg);
         background-color: var(--bg-color);
         transition: 0.2s;
     }
 
-        .competence-button:hover {
+        button competence-button:hover {
             color: var(--hover-text);
             transform: translate(-0.25rem, -0.25rem);
             background: var(--hover-bg);
-                box-shadow: 0.25rem 0.25rem var(--bg);
+            box-shadow: 0.25rem 0.25rem var(--bg);
         }
 
-        .competence-button:active {
+        button competence-button:active {
             transform: translate(0);
             box-shadow: none;
         }
