--- a/portfolio-aro/Pages/Home.razor
+++ b/portfolio-aro/Pages/Home.razor
@@ -2,16 +2,19 @@
 
 <PageTitle>Portfolio</PageTitle>
 
-<div id="about-me" class="section">
+<div id="about-me" style="height:100vh;" class="section">
     <AboutMe />
+</div>
+<div class="section">
+    <Timeline />
 </div>
 
 <div id="competences" class="section">
     <Competences />
 </div>
 
-<div id="interests" class="section">
-    <Interests />
+<div id="projects" class="section">
+    <Projects />
 </div>
 
 <style>
@@ -20,11 +23,13 @@
         color: black;
         font-size: 1.25em;
     }
-    
+
 
     .section {
-        height:100vh;
-        padding:10%;
+        padding-top: 5%;
+        padding-top: 5%;
+        padding-left: 15%;
+        padding-right: 15%;
         align-content: center;
     }
 
@@ -36,12 +41,11 @@
 <style>
 
     .card {
-        background-color: transparent;
+        background-color: white;
         transition: filter 0.5s;
     }
 
     .card-img-top {
-        height: 100%;
         align-content: center;
     }
 
