--- a/portfolio-aro/Pages/Home.razor
+++ b/portfolio-aro/Pages/Home.razor
@@ -43,6 +43,7 @@
     .card {
         background-color: white;
         transition: filter 0.5s;
+        margin: 1%;
     }
 
     .card-img-top {
