--- a/portfolio-aro/Pages/Projects.razor
+++ b/portfolio-aro/Pages/Projects.razor
@@ -1,7 +1,7 @@
 ﻿@using portfolio_aro.Pages.Components
 <h1>Here are some of my favorite </h1>
 
-<div class="d-flex flex-row justify-content-around" style="flex-wrap:wrap;">
+<div class="d-flex flex-row justify-content-around" style="flex-wrap:wrap; align-items: flex-start;">
     <Card imagePath="@graphmapImage" title="@graphmapTitle" description="@graphmapDescription" sources="@graphmapSources"></Card>
     <Card imagePath="@snakeImage" title="@snakeTitle" description="@snakeDescription" sources="@snakeSources" demo="@snakeDemo"></Card>
     <Card imagePath="@genshinoptimizerImage" title="@genshinoptimizerTitle" description="@genshinoptimizerDescription"></Card>
