--- a/portfolio-aro/Pages/AboutMe.razor
+++ b/portfolio-aro/Pages/AboutMe.razor
@@ -31,7 +31,8 @@
     <img class="pic-of-me" src="./assets/img/Me!.jpg" alt="It's a picture of me" />
 </div>
 
-<button @onclick="DownloadFileFromURL" style="--bg-color: #f5dced; --hover-bg: #edc7e1;">
+<button @onclick="DownloadFileFromURL" class="competence-button
+" style="--bg-color: #f5dced; --hover-bg: #edc7e1;">
     Download my CV
 </button>
 
