--- a/portfolio-aro/Pages/Timeline.razor
+++ b/portfolio-aro/Pages/Timeline.razor
@@ -1,4 +1,8 @@
-﻿<section id="timeline">
+﻿<h3 style="text-align: center;
+    margin-bottom: 5%;">
+    Let's see what I've done since my high school baccalaureate
+</h3>
+<section id="timeline">
     <article>
         <div class="inner">
             <span class="date">
@@ -20,7 +24,7 @@
                 <span class="month">Sept</span>
                 <span class="year">2021</span>
             </span>
-            <h2>BUT Informatique</h2>
+            <h2>BUT in Computer Science</h2>
             <p>
                 IUT Lyon 1 - Lyon, France <br />
                 3<sup>rd</sup> year specialized in application development: design, development and validation
@@ -75,7 +79,7 @@
             width: 100%;
             margin: 0 0 20px 0;
             position: relative;
-            height:15em;
+            height: 12.5em;
         }
 
             section#timeline article:after {
@@ -103,10 +107,10 @@
                     border-radius: 100%;
                     font-size: 12px;
                     font-weight: 900;
-                    background: #25303B;
-                    box-shadow: 0 0 0 7px #25303B;
+                    background: #ffffff;
+                    box-shadow: 0 0 0 7px #ffffff;
                     align-content: center;
-                    color: rgba(255,255,255,0.5);
+                    color: #c3c39e;
                 }
 
                     section#timeline article div.inner span.date span {
@@ -158,27 +162,27 @@
                 }
 
             section#timeline article:nth-child(1) div.inner h2 {
-                background: #e74c3c;
+                background: #a6e8d2;
             }
 
                 section#timeline article:nth-child(1) div.inner h2:after {
-                    background: #e74c3c;
+                    background: #a6e8d2;
                 }
 
             section#timeline article:nth-child(2) div.inner h2 {
-                background: #2ecc71;
+                background: #a6e8d2;
             }
 
                 section#timeline article:nth-child(2) div.inner h2:after {
-                    background: #2ecc71;
+                    background: #a6e8d2;
                 }
 
             section#timeline article:nth-child(3) div.inner h2 {
-                background: #e67e22;
+                background: #ebd2af;
             }
 
                 section#timeline article:nth-child(3) div.inner h2:after {
-                    background: #e67e22;
+                    background: #ebd2af;
                 }
 
             section#timeline article:nth-child(4) div.inner h2 {
