--- a/portfolio-aro/Shared/NavMenu.razor
+++ b/portfolio-aro/Shared/NavMenu.razor
@@ -7,7 +7,7 @@
     <button class="nav-item nav-link" onclick="document.getElementById('competences').scrollIntoView({behavior:'smooth',block:'center'})">
         Skills
     </button>
-    <button class="nav-item nav-link" onclick="document.getElementById('projects').scrollIntoView({behavior:'smooth',block:'center'})">
+    <button class="nav-item nav-link" onclick="document.getElementById('projects').scrollIntoView({behavior:'smooth',block:'start'})">
         Projects
     </button>
 </nav>
