--- a/portfolio-aro/Pages/Components/Card.razor
+++ b/portfolio-aro/Pages/Components/Card.razor
@@ -1,7 +1,7 @@
-﻿<div class="card @cardClass" style="width: 18rem;">
-    <div class="card-header" >
+﻿<div class="card @cardClass">
+    <div class="card-header" style="    height: 3em;">
 
-        <h5 class="card-title">@title</h5>
+        <strong><h4 class="card-title">@title</h4></strong>
     </div>
     <div class="card-img-top" style="    width: 100%;
     height: 10em;">
@@ -28,10 +28,10 @@
             @if (demo != null)
             {
                 <a href="@demo">
+                    <button>
                     <span class="material-symbols-outlined">
                         play_arrow
                     </span>
-                    <button>
                         Demo
                     </button>
                 </a>
@@ -48,10 +48,11 @@
     [Parameter] public string? demo { get; set; }
     [Parameter] public string? cardClass { get; set; }
 
+
     public class CardClass
     {
-        public const string GAME = "card-games";
-        public const string ANIME = "card-animes";
+        public const string UNIV = "card-games";
+        public const string WORK = "card-animes";
     }
 
 
@@ -65,6 +66,10 @@
     .card-body{
         height: 10em;
         overflow: auto;
+    }
+
+    .card {
+        width: 25rem;
     }
 </style>
 
