--- a/portfolio-aro/Pages/Home.razor
+++ b/portfolio-aro/Pages/Home.razor
@@ -9,7 +9,7 @@
     <Timeline />
 </div>
 
-<div id="competences" class="section">
+<div id="competences" style="height:100vh;" class="section">
     <Competences />
 </div>
 
