--- a/portfolio-aro/Pages/Projects.razor
+++ b/portfolio-aro/Pages/Projects.razor
@@ -1,5 +1,5 @@
 ﻿@using portfolio_aro.Pages.Components
-<h3 style="margin-bottom: 5%;     text-align: -webkit-center;">And I've also participated in multiple projects </h3>
+<h3 style="margin-bottom: 5%;     text-align: -webkit-center;">I've also participated in a lot of projects!</h3>
 
 <div class="d-flex flex-row" style="flex-wrap:wrap; align-items: flex-start;">
     <Card imagePath="@graphmapImage" title="@graphmapTitle" description="@graphmapDescription" sources="@graphmapSources" cardClass=""></Card>
